--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,7 @@
     "web-vitals": "^2.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=5002 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -58,5 +58,6 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://ordulu.com"
+  "proxy": "http://localhost:8080"
+
 }
