Mail sender bug fix.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-server.port=8080
-
+server.port=8090
+server.max-http-header-size=40KB
+logging.file.path= /
+logging.file.name = log.txt
+logging.level.com.ordulu = error
